[gd_scene load_steps=5 format=3 uid="uid://c1bqlj4ra0qlu"]

[ext_resource type="Script" uid="uid://cqo24fis73jyy" path="res://scripts/invoice_menu.gd" id="1_a44co"]
[ext_resource type="Texture2D" uid="uid://b3mpl8a3f2ch8" path="res://assets/Pi7_angle-left.png" id="2_cdetr"]
[ext_resource type="Texture2D" uid="uid://fl18prknidcm" path="res://assets/Pi7_angle-right.png" id="3_jcfwv"]

[sub_resource type="GDScript" id="GDScript_ntdgr"]
script/source = "extends Button
"

[node name="InvoiceMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a44co")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="MakeEntry" type="VBoxContainer" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/MakeEntry"]
layout_mode = 2

[node name="Date" type="Label" parent="CenterContainer/MakeEntry/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "DATE"

[node name="Summary" type="TextEdit" parent="CenterContainer/MakeEntry"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
placeholder_text = "Summary of work done..."
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MakeEntry"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="PrevDay" type="Button" parent="CenterContainer/MakeEntry/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
icon = ExtResource("2_cdetr")
expand_icon = true
script = SubResource("GDScript_ntdgr")

[node name="Done" type="Button" parent="CenterContainer/MakeEntry/HBoxContainer"]
layout_mode = 2
text = "Complete"

[node name="NextDay" type="Button" parent="CenterContainer/MakeEntry/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("3_jcfwv")
expand_icon = true

[node name="PickDuration" type="VBoxContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PickDuration"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="CenterContainer/PickDuration/HBoxContainer"]
layout_mode = 2
text = "Start Date"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PickDuration/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PickDuration/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Year"

[node name="StartYear" type="SpinBox" parent="CenterContainer/PickDuration/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/PickDuration/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PickDuration/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Month"

[node name="StartMonth" type="SpinBox" parent="CenterContainer/PickDuration/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/PickDuration/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PickDuration/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Day"

[node name="StartDay" type="SpinBox" parent="CenterContainer/PickDuration/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/PickDuration"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="CenterContainer/PickDuration/HBoxContainer2"]
layout_mode = 2
text = "End Date"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PickDuration/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PickDuration/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Year"

[node name="EndYear" type="SpinBox" parent="CenterContainer/PickDuration/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/PickDuration/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PickDuration/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Month"

[node name="EndMonth" type="SpinBox" parent="CenterContainer/PickDuration/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/PickDuration/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PickDuration/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
text = "Day"

[node name="EndDay" type="SpinBox" parent="CenterContainer/PickDuration/HBoxContainer2/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="CreateInvoice" type="Button" parent="CenterContainer/PickDuration"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Create invoice"

[connection signal="pressed" from="CenterContainer/MakeEntry/HBoxContainer/PrevDay" to="." method="_on_prev_day_pressed"]
[connection signal="pressed" from="CenterContainer/MakeEntry/HBoxContainer/Done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="CenterContainer/MakeEntry/HBoxContainer/NextDay" to="." method="_on_next_day_pressed"]
[connection signal="pressed" from="CenterContainer/PickDuration/CreateInvoice" to="." method="_on_create_invoice_pressed"]
